k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nbio-websocket
  labels:
    app: nbio-websocket
    environment: development
