k8s/websocket-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nbio-websocket-service
  namespace: nbio-websocket
  labels:
    app: nbio-websocket
spec:
  type: NodePort
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
    name: websocket
  - port: 9090
    targetPort: 9090
    nodePort: 30090
    protocol: TCP
    name: metrics
  selector:
    app: nbio-websocket
